force-app/main/default/objects/CreditMemo/fields/COMM_IssuanceDate__c.field-meta.xml
<CustomField>
    <fullName>COMM_IssuanceDate__c</fullName>
    <description>Date when document is issued in SAP</description>
    <label>SAP Document Date</label>
    <type>Date</type>
</CustomField>