force-app/main/default/objects/CreditMemo/fields/COMM_SAPCount__c.field-meta.xml
<CustomField>
    <fullName>COMM_SAPCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of SAP integration attempt counts</description>
    <label>SAP Retry Count</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>