force-app/main/default/objects/CreditMemo/fields/COMM_SAPDocumentId__c.field-meta.xml
<CustomField>
    <fullName>COMM_SAPDocumentId__c</fullName>
    <description>SAP generated document number</description>
    <label>SAP Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>