force-app/main/default/objects/CreditMemo/fields/COMM_SAPLastLog__c.field-meta.xml
<CustomField>
    <fullName>COMM_SAPLastLog__c</fullName>
    <description>Last message received from Mulesoft / SAP endpoint.</description>
    <label>SAP Last Log</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>